archive/apps/homepage/overlays/dev/ingress.patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - dashboard.dev.wdalgleish.com
      secretName: dashboard-tls
  rules:
    - host: dashboard.dev.wdalgleish.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  name: http
